syntax = "proto2";
option java_package = "com.rwproto";
option java_outer_classname = "GroupChampProto";

package groupChamp;


enum RequestType{

	Enter = 1;//进入主界面


}


message CommonReqMsg{
	required RequestType reqType = 1;//请求功能协议类型
}


message CommonRspMsg{
	required RequestType reqType = 1;//回应的功能协议类型
	required bool isSuccess = 2;//是否成功处理
	optional string tipMsg = 3;//提示消息，可以是成功，也可以是失败的提示消息

}